Fix issue 03925: IE8: Extra space in admin panel Dev Added styles for floated-left items in  menubar-title divisions
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8042 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -143,6 +143,22 @@ div.menubar {
     margin-bottom:2px;
 }
 
+.menubar-title-left {
+    float: left;
+	font-size:11px;
+}
+
+.menubar-title-right {
+    float: right;
+}
+
+.menubar-title-right a {
+        font-size:10px;
+        font-weight:bold;
+        color:#ee0000 !important;
+        text-decoration: underline !important; 
+}
+
 .menubar-left {
 	background-color: #EEF6FF;
 	text-align: left;
@@ -158,17 +174,6 @@ div.menubar {
 	float: right;
 	line-height: 1em;
     white-space: nowrap;    
-}
-
-.menubar-title-right {
-    float: right;
-}
-
-.menubar-title-right a {
-        font-size:10px;
-        font-weight:bold;
-        color:#ee0000 !important;
-        text-decoration: underline !important; 
 }
 
 .menubar select {
